--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -106,16 +106,8 @@
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
                 <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>控制列表</span></a></li>
-                <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>布局</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="blank_page.html"> Blank Page</a></li>
-                        <li><a href="boxed_view.html"> Boxed Page</a></li>
-                        <li><a href="leftmenu_collapsed_view.html"> Sidebar Collapsed</a></li>
-                        <li><a href="horizontal_menu.html"> Horizontal Menu</a></li>
-
-                    </ul>
-                </li>
-
+                <li><a href="{:url('admin/Carousel/index')}"><i class="fa fa-laptop"></i><span>轮播图管理</span></a></li>
+                <li><a href="{:url('admin/Comment/index')}"><i class="fa fa-bullhorn"></i> <span>评论管理</span></a></li>
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>管理员管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/user/index')}">管理员列表</a></li>
@@ -151,10 +143,6 @@
                     </ul>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Routeslist/index')}">旅游路线列表</a></li>
-
-                <li><a href="{:url('admin/Comment/index')}"><i class="fa fa-bullhorn"></i> <span>评论管理</span></a></li>
-
-
                     </ul>
                 </li>
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>特产美食</span></a>
