--- a/public/static/app/index/css/zzsc.css
+++ b/public/static/app/index/css/zzsc.css
@@ -4,7 +4,7 @@ table {border-collapse:collapse;border-spacing:0;}
 fieldset,img {border:0;}
 address,caption,cite,code,dfn,em,strong,th,var {font-style:normal;font-weight:normal;}
 ol,ul {list-style:none;}
-h1,h2,h3,h4,h5,h6 {font-size:100%;font-weight:normal;}
+/*h1,h2,h3,h4,h5,h6 {font-size:100%;font-weight:normal;}*/
 b{font-weight:normal;}
 button {cursor:pointer;}
 input, select, form img, button,label,textarea{font-size:12px;vertical-align:middle;font-family:Tahoma;}
